title change again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Gurks Thumb</title>
+    <title>Gurks Thumb is big</title>
     <!-- Link stylesheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
