--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Greenest Thumb</title>
+    <!-- Link bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Link stylesheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
